// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.frontgate.fg_pilot;

service FrontgateServiceForPilot {
	rpc GetInfo (Empty) returns (Info);
	rpc CloseChannel (Empty) returns (Empty);

	rpc GetConfdInfo(Empty) returns (ConfdInfo);
	rpc StartConfd (StartConfdRequest) returns (Empty);
	rpc StopConfd (StopConfdRequest) returns (Empty);

	rpc RegisterMetadata (RegisterMetadataRequest) returns (Empty);
	rpc DeregisterMetadata (DeRegisterMetadataRequest) returns (Empty);

	rpc RegisterCmd (RegisterCmdRequest) returns (Empty);
	rpc DeregisterCmd (DeRegisterCmdRequest) returns (Empty);
}

message Info {
	string frontgate_id = 1;
	string frontgate_service_id = 2;
	repeated string drone_ips = 3;
}

message ConfdInfo {
	string drone_ip = 1;
	string status = 2;
}


message StartConfdRequest {
	string drone_ip = 1;
	repeated string frontgate_ips = 2;
	int32 timeout_seccond = 3;
}

message StopConfdRequest {
	string drone_ip = 1;
	int32 timeout_seccond = 3;
}

message RegisterMetadataRequest {
	string drone_ip = 1;
	string fg_id = 2;
	string cmd = 3;
	int32 timeout_seccond = 4;
	int32 retry = 5;
}

message DeRegisterMetadataRequest {
	string drone_ip = 1;
	string fg_id = 2;
	string fg_ip = 3;
	string cmd = 4;
	int32 timeout_seccond = 5;
	int32 retry = 6;
}

message RegisterCmdRequest {
	string drone_ip = 1;
	string fg_id = 2;
	string cmd = 3;
	int32 timeout_seccond = 4;
	int32 retry = 5;
}

message DeRegisterCmdRequest {
	string drone_ip = 1;
	string fg_id = 2;
	string fg_ip = 3;
	string cmd = 4;
	int32 timeout_seccond = 5;
	int32 retry = 6;
}

message Empty {}
